# AniList-GTK

./: .gitignore  README.md  ch.laurinneff.AniList-GTK.json  meson.build  meson_options.txt
.github/workflows/: main.yml
build-aux/win32/: .gitignore  PKGBUILD  README.md  build.ps1  gpl-3.0.rtf  installer.nsi
data/: ch.laurinneff.AniList-GTK.appdata.xml.in  ch.laurinneff.AniList-GTK.desktop.in  ch.laurinneff.AniList-GTK.gschema.xml  meson.build
data/icons/: meson.build
data/resources/: anilist_gtk.gresource.xml
data/resources/css/: blur.css  rounded.css
data/resources/graphql/: media_list.graphql  update_media_list_entry.graphql  user.graphql
data/resources/ui/: LoginWindow.ui  MainWindow.ui  MediaListEntryWidget.ui  MediaListReordererRowWidget.ui  PreferencesWindow.ui
po/: POTFILES
src/: AnilistClient.vala  AnilistGtkApp.vala  BuildConfig.vala.in  DPAPI.c  DPAPI.h  DPAPI.vapi  LoginWindow.ui  LoginWindow.vala  MainWindow.ui  MainWindow.vala  MediaListEntryWidget.vala  MediaListReordererRowWidget.vala  MediaListReordererWidget.vala  MediaListWidget.vala  PreferencesWindow.vala  anilist_gtk.gresource.xml  meson.build
subprojects/: libadwaita.wrap
